# MedicalProject

./: pyproject.toml
Enterleaf-MedicalProject/: manage.py
Enterleaf-MedicalProject/Enterleaf_MedicalProject/: asgi.py  settings.py  urls.py  wsgi.py
